@@ -707,10 +707,25 @@ large box
 		[ The Count of Monte Cristo, by Alexandre Dumas ]
 chih*sung*tzu
 	A Chinese rain god.
-*hromatic *ragon
 tiamat
-	Tiamat is said to be the mother of evil dragonkind.  She is
-	extremely vain.
+	Avaricious,  supremely vain,  and  profoundly Lawful  Evil,  Tiamat
+	proclaims  herself  the   creator  of  all  evil  dragonkind,   and
+	certainly many evil dragons  revere her as their creator and patron
+	deity.  She  infests the  uppermost  of  the  Nine  Hells with  her
+	consorts,  each a  Great Wyrm  of different  colour -  one red, one
+	white, one green, one blue, and one black.
+	Tiamat's Avatar appears  as a gigantic five-headed dragon with  one
+	head of  each of  the chromatic  (evil) dragon  types. Each  head's
+	colour  runs the length  of the  neck and into  the forepart of het
+	body  as stripes,  gradually blending  to  three  stripes of  grey,
+	blue-green,  and  purple  over her  back  and  hind-quarters,  then
+	merging into a muddy dark  brown tail. Her underbelly and  legs are
+	greenish white fading into her upper body colours.
+		 [ Monster Mythology, by TSR inc. ]
+chromatic dragon
+	Combining the powers of lesser dragons combine the powers of lesser
+	dragons like their mother Tiamat.  Legends tell of a far away realm
+	where these creatues can be found in large numbers.
 ~elven cloak
 ~oilskin cloak
 *cloak*
