@@ -32,7 +32,7 @@ static NEARDATA const int nasties[] = {
 	PM_COUATL, PM_CAPTAIN, PM_WINGED_GARGOYLE, PM_MASTER_MIND_FLAYER,
 	PM_FIRE_ELEMENTAL, PM_JABBERWOCK, PM_ARCH_LICH, PM_OGRE_KING,
 	PM_OLOG_HAI, PM_IRON_GOLEM, PM_OCHRE_JELLY, PM_GREEN_SLIME,
-	PM_DISENCHANTER
+	PM_DISENCHANTER, PM_CHROMATIC_DRAGON,
 	};
 
 static NEARDATA const unsigned wizapp[] = {
